# jcode

./: .env.example  .env.mcp  .gitignore  ADVANCED_FEATURES_REPORT.md  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE_IDE_INTEGRATION.md  BENCHMARK_SUITE_SUMMARY.md  CARPAI_PRODUCTION_ASSESSMENT.md  CARPAI_VS_CLAUDE_CURSOR_ASSESSMENT.md  CLAUDE.md  CLAUDE_CODE_ARCH_ANALYSIS.md  CLAUDE_CODE_ARCH_ANALYSIS_V2.md  CLAUDE_CODE_V3_MIGRATION.md  COMPARISON_VS_CURSOR_CLAUDE.md  COMPILE_FIX_STATUS.md  COMPREHENSIVE_COMPARISON_REPORT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  DEPLOYMENT_TASKS.md  Dockerfile  FINAL_MIGRATION_REPORT.md  FINAL_REPORT.md  FIX_LOG.md  IDE_ECOSYSTEM_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_ECOSYSTEM_SUMMARY.md  MIGRATION_PROGRESS.md  NOTICE  OAUTH.md  OPTIMIZATION_SUMMARY.md  P02_FAULT_TOLERANCE_COMPLETE.md  P03_INTEGRATION_TESTS_COMPLETE.md  P1_HOT_SWITCHING_COMPLETE.md  P1_KV_CACHE_OPTIMIZATION_COMPLETE.md  P1_PARTITION_TOLERANCE_COMPLETE.md  P2_NODE_JOIN_COMPLETE.md  P2_RESOURCE_TRACKER_COMPLETE.md  (+168 more)
crates/carpai-cli/: Cargo.toml  E2E_INTEGRATION_PLAN.md  README.md  build.rs
crates/carpai-cli/src/: agent_bridge.rs  config.rs  config_watch.rs  grpc_client.rs  lib.rs  main.rs  modes.rs  retry.rs  video_export.rs
crates/carpai-cli/tests/: ambient_test.rs  bridge_test.rs  config_test.rs  e2e_test.rs  mod.rs  notifications_test.rs
crates/carpai-codebase/: Cargo.toml
crates/carpai-codebase/src/: graph.rs  indexer.rs  lib.rs  parser.rs  symbols.rs
crates/carpai-core/: Cargo.toml
crates/carpai-core/src/: abort.rs  agent_loop.rs  config.rs  event_bus_impl.rs  filesystem_impl.rs  inference_impl.rs  lib.rs  memory_impl.rs  rest_llm.rs  retry.rs  session_impl.rs  tool_executor_impl.rs
crates/carpai-ide-plugin/: Cargo.toml
crates/carpai-ide-plugin/src/: chat_state.rs  grpc_client.rs  lsp_integration.rs  main.rs
crates/carpai-internal/: Cargo.toml
crates/carpai-internal/src/: agent_context.rs  auth.rs  completion.rs  event_bus.rs  filesystem.rs  inference.rs  inference_backend.rs  lib.rs  memory.rs  memory_backend.rs  session.rs  tool_executor.rs  tools.rs
crates/carpai-sdk/: BENCHMARK_RESULTS.md  Cargo.toml
crates/carpai-sdk/benches/: sdk_bench.rs
crates/carpai-sdk/examples/: basic_usage.rs  ide_integration.rs  offline_mode.rs
crates/carpai-sdk/src/: cache.rs  cache_tests.rs  client.rs  config.rs  error.rs  error_tests.rs  ide.rs  lib.rs  mcp.rs  metrics.rs  protocol.rs  session_api.rs  streaming.rs  types.rs  types_tests.rs
crates/carpai-server/: Cargo.toml  build.rs
crates/carpai-server/src/: app.rs  config.rs  lib.rs  main.rs
crates/carpvoid-client/: Cargo.toml
crates/carpvoid-client/src/: main.rs
crates/jcode-agent-advanced/: Cargo.toml
crates/jcode-agent-advanced/src/: abort_controller.rs  agent_loop.rs  error_recovery.rs  lib.rs  model_fallback.rs  parallel_executor.rs  result_handler.rs  streaming_tool_executor.rs  types.rs
crates/jcode-auth/: Cargo.toml
crates/jcode-auth/examples/: enterprise_setup.rs
crates/jcode-auth/src/: audit.rs  encryption.rs  jwt.rs  lib.rs  oauth.rs  rbac.rs
crates/jcode-build-engine/: Cargo.toml
crates/jcode-build-engine/src/: api.rs  cache.rs  environment.rs  error.rs  global_scheduler.rs  lib.rs  node_scheduler.rs  task_scheduler.rs  toolchain.rs  types.rs
crates/jcode-ci-generator/: Cargo.toml
crates/jcode-ci-generator/src/: generator.rs  lib.rs  stack_detector.rs  templates.rs
crates/jcode-code-value/: Cargo.toml
crates/jcode-code-value/src/: classifier.rs  lib.rs  parser.rs  types.rs
crates/jcode-completion/: Cargo.toml
crates/jcode-completion/src/: ast_context.rs  ast_parser.rs  behavior_learner.rs  collab_aware_completion.rs  embedding_model.rs  incremental_index.rs  lib.rs  llm_candidate.rs  lsp_provider.rs  memory_ranker.rs  metrics.rs  multiline_completion.rs  semantic_search.rs  streaming_prefetch.rs  treesitter_provider.rs  unified_provider.rs
crates/jcode-completion/tests/: integration_tests.rs
crates/jcode-config-dynamic/: Cargo.toml
crates/jcode-config-dynamic/src/: config_merger.rs  feature_flags.rs  file_watcher.rs  lib.rs  safe_writer.rs
crates/jcode-context-management/: Cargo.toml
crates/jcode-context-management/src/: lib.rs  semantic_cache.rs  types.rs
crates/jcode-cpu-inference/: Cargo.toml  MODEL_HOTSWAP_USAGE.md
crates/jcode-cpu-inference/src/: graceful_manager.rs  lib.rs  model_lifecycle_manager.rs
crates/jcode-cross-file-repair/: Cargo.toml
crates/jcode-cross-file-repair/src/: ast.rs  bridge.rs  dependency.rs  error_detector.rs  file_processor.rs  lib.rs  self_correction.rs  type_checker.rs
crates/jcode-debate-core/: Cargo.toml
crates/jcode-debate-core/src/: coordinator.rs  debate_session.rs  lib.rs  perspectives.rs  provider_adapter.rs  rate_limiter.rs
crates/jcode-debate-orchestrator/: Cargo.toml
crates/jcode-debate-orchestrator/src/: lib.rs
crates/jcode-debate-orchestrator/tests/: integration_test.rs
crates/jcode-defaults/: Cargo.toml
crates/jcode-defaults/src/: config.rs  discovery.rs  lib.rs  presets.rs  vscode_integration.rs
crates/jcode-desktop/: Cargo.toml
crates/jcode-desktop/src/: desktop_log.rs  desktop_prefs.rs  main.rs  main_tests.rs  power_inhibit.rs  render_helpers.rs  session_data.rs  session_launch.rs  session_launch_security_tests.rs  single_session.rs  single_session_render.rs  workspace.rs  workspace_tests.rs
crates/jcode-distributed-inference/: Cargo.toml  KV_CACHE_COMPRESSION_USAGE.md  build.rs
crates/jcode-distributed-inference/src/: coordinator_client.rs  kv_cache_compressor.rs  kv_cache_manager.rs  kv_cache_optimizer.rs  layer_executor.rs  lib.rs  serialization.rs  speculative.rs  worker.rs
crates/jcode-embedding/: Cargo.toml
crates/jcode-embedding/src/: lib.rs  (+4 more)
crates/jcode-enterprise-server/: Cargo.toml  README.md
crates/jcode-grpc/: Cargo.toml  PERFORMANCE_BENCHMARK.md  build.rs
crates/jcode-hooks/: Cargo.toml
crates/jcode-ide-integration/: Cargo.toml
jcode-gui/: Cargo.toml
jcode-gui/src/: backend.rs  backend_desktop_stub.rs  backend_web.rs  main.rs  model.rs
(+2534 files in other folders)
