[package]
name = "carpai"
version = "0.12.0"
description = "Possibly the greatest coding agent ever built — blazing-fast TUI, multi-model, swarm coordination, 30+ tools"
edition = "2024"
autobins = false

[workspace]
members = [
    ".",
    "crates/jcode-agent-runtime",
    "crates/jcode-ambient-types",
    "crates/jcode-auth-types",
    "crates/jcode-embedding",
    "crates/jcode-gateway-types",
    "crates/jcode-import-core",
    "crates/jcode-pdf",
    "crates/jcode-background-types",
    "crates/jcode-batch-types",
    "crates/jcode-build-support",
    "crates/jcode-compaction-core",
    "crates/jcode-config-types",
    "crates/jcode-core",
    "crates/jcode-memory-types",
    "crates/jcode-message-types",
    "crates/jcode-overnight-core",
    "crates/jcode-plan",
    "crates/jcode-swarm-core",
    "crates/jcode-protocol",
    "crates/jcode-selfdev-types",
    "crates/jcode-session-types",
    "crates/jcode-storage",
    "crates/jcode-side-panel-types",
    "crates/jcode-azure-auth",
    "crates/jcode-notify-email",
    "crates/jcode-provider-metadata",
    "crates/jcode-provider-core",
    "crates/jcode-provider-openrouter",
    "crates/jcode-provider-openai",
    "crates/jcode-provider-gemini",
    "crates/jcode-tui-markdown",
    "crates/jcode-tui-messages",
    "crates/jcode-usage-types",
    "crates/jcode-tui-core",
    "crates/jcode-tui-mermaid",
    "crates/jcode-task-types",
    "crates/jcode-tool-core",
    "crates/jcode-tool-types",
    "crates/jcode-tui-account-picker",
    "crates/jcode-tui-render",
    "crates/jcode-tui-session-picker",
    "crates/jcode-tui-style",
    "crates/jcode-tui-tool-display",
    "crates/jcode-tui-usage-overlay",
    "crates/jcode-update-core",
    "crates/jcode-terminal-launch",
    "crates/jcode-tui-workspace",
    "crates/jcode-mobile-core",
    "crates/jcode-mobile-sim",
    "crates/jcode-desktop",
    # Merged types crates (replacing individual *-types crates)
    "crates/jcode-core-types",
    "crates/jcode-runtime-types",
    "crates/jcode-ui-types",
    # 新增: Claude Code 移植模块
    "crates/jcode-sandbox",
    "crates/jcode-mcp-advanced",
    "crates/jcode-hooks",
    "crates/jcode-lsp",
    "crates/jcode-p2-features",
    "crates/jcode-session-persist",
    # 编译引擎
    "crates/jcode-build-engine",
    # 锁管理器
    "crates/jcode-lock-manager",
    # 多文件原子化编辑 (Swarm 能力强化)
    "crates/jcode-multi-file-edit",
    # 跨文件修复引擎
    "crates/jcode-cross-file-repair",
    # 自动补全引擎
    "crates/jcode-completion",
    # 微型 CI
    "crates/jcode-micro-ci",
    # 代码价值六维分类
    "crates/jcode-code-value",
    # CI 配置生成器
    "crates/jcode-ci-generator",
    # 项目构建器 (Builder模式)
    "crates/jcode-project-builder",
    # Skills 模式 + 链式调用
    "crates/jcode-skills",
    # Qwen 补全 LoRA 训练
    "crates/jcode-lora-train",
    # Vendor: agentgrep (git 依赖本地化，消除供应链风险)
    # 运行 scripts/vendor_agentgrep.sh 填充此目录
    "crates/vendor-agentgrep",
    # RAG 工具链闭环系统
    "crates/jcode-rag",
    # LLM Provider 集成 (Deepseek + vLLM + llama.cpp)
    "crates/jcode-llm",
    # gRPC Server (LlmService implementation)
    "crates/jcode-grpc",
    # CarpAI Unified Client SDK
    "crates/carpai-sdk",
    # Enterprise Server 代码已搬迁到 src/enterprise/ (由 enterprise feature 控制)
    "crates/carpai-codebase",
    # CPU Inference Engine (llama.cpp wrapper)
    "crates/jcode-cpu-inference",
    # 聚合类型 re-export crate
    "crates/jcode-types",
    # 高级 Agent 循环引擎
    "crates/jcode-agent-advanced",
    # 上下文管理与缓存系统
    "crates/jcode-context-management",
    # 性能监控与诊断系统
    "crates/jcode-telemetry",
    # 动态配置
    "crates/jcode-config-dynamic",
    # 默认配置和发现
    "crates/jcode-defaults",
    # IDE 集成
    "crates/jcode-ide-integration",
    # 远程增强
    "crates/jcode-remote-enhanced",
    # 统一调度器
    "crates/jcode-unified-scheduler",
    # Enterprise Authentication & Authorization
    "crates/jcode-auth",
]

# Workspace 包元数据 (供成员 crate 继承)
[workspace.package]
edition = "2024"
version = "0.12.0"
authors = ["JCode Contributors"]
license = "MIT"

[workspace.dependencies]
# 共享依赖 — 所有 crate 通过 workspace = true 引用
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
pin-project-lite = "0.2"
async-stream = "0.3"
indexmap = "2"
lsp-types = "0.95"
tempfile = "3"
glob = "0.3"
path-clean = "1"
dirs = "5"
attohttpc = "0.27"      # HTTP client for plugin downloads
tar = "0.4"             # Archive extraction
flate2 = "1.0"          # Gzip decompression
wildmatch = "2"
base64 = "0.22"

[lib]
name = "jcode"
path = "src/lib.rs"

[[bin]]
name = "jcode"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[[bin]]
name = "jcode-harness"
path = "src/bin/harness.rs"

[[bin]]
name = "session_memory_bench"
path = "src/bin/session_memory_bench.rs"
required-features = ["dev-bins"]

[[bin]]
name = "mermaid_side_panel_probe"
path = "src/bin/mermaid_side_panel_probe.rs"
required-features = ["dev-bins"]

[[bin]]
name = "tui_bench"
path = "src/bin/tui_bench.rs"
required-features = ["dev-bins"]

# Benchmark tests
[[test]]
name = "code_generation_benchmark"
path = "tests/benchmarks/code_generation.rs"

[[test]]
name = "rag_retrieval_benchmark"
path = "tests/benchmarks/rag_retrieval.rs"

[[test]]
name = "cross_file_refactoring_benchmark"
path = "tests/benchmarks/cross_file_refactoring.rs"

[[test]]
name = "performance_baseline_benchmark"
path = "tests/benchmarks/performance_baseline.rs"

[[test]]
name = "kv_cache_cost_benchmark"
path = "tests/benchmarks/kv_cache_cost.rs"

[[bin]]
name = "jcode-grpc"
path = "src/bin/jcode-grpc.rs"

[[bin]]
name = "jcode-server"
path = "src/bin/jcode-server.rs"

[dependencies]
# Memory allocator (reduces fragmentation for long-running server)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
http = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File operations
glob = "0.3"
ignore = "0.4"           # gitignore-aware file walking
walkdir = "2"
similar = "2"            # diffing for edits

# Utilities
dirs = "5"               # home directory
anyhow = "1"
thiserror = "1"
libc = "0.2"             # Unix system calls (flock)
chrono = { version = "0.4", features = ["serde", "clock"] }
regex = "1"
aho-corasick = "1"       # Aho-Corasick多模式匹配算法 (性能优化100x)
tree-sitter = "0.24"      # Tree-sitter AST解析器 (代码智能基础)
tree-sitter-rust = "0.23" # Rust语言支持
tree-sitter-python = "0.23" # Python语言支持
tree-sitter-javascript = "0.23" # JavaScript/TypeScript支持
tree-sitter-go = "0.23"   # Go语言支持
tree-sitter-c = "0.23"    # C语言支持
tree-sitter-cpp = "0.23"  # C++语言支持
urlencoding = "2"        # URL encoding for web search
tracing = "0.1"          # Structured logging

lsp-types = { workspace = true }
uuid = { version = "1", features = ["v4", "v5"] }
lazy_static = "1.4"
proctitle = "0.1"
which = "6"
sysinfo = "0.32"         # System information (CPU, memory, etc.)
lru = "0.12"             # LRU cache for response caching
num_cpus = "1"           # Get number of CPUs
# md5 已被替换为 sha2 (2026-05-10) — md5 = "0.7"
cron = "0.12"             # Cron expression parsing for task scheduler

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)
jcode-embedding = { path = "crates/jcode-embedding", optional = true }
jcode-gateway-types = { path = "crates/jcode-gateway-types" }
jcode-import-core = { path = "crates/jcode-import-core" }

# OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.9.3"
hex = "0.4"
url = "2"
open = "5"               # Open URLs in browser
jcode-auth-types = { path = "crates/jcode-auth-types" }
jcode-azure-auth = { path = "crates/jcode-azure-auth" }
jcode-agent-runtime = { path = "crates/jcode-agent-runtime" }
jcode-ambient-types = { path = "crates/jcode-ambient-types" }
jcode-notify-email = { path = "crates/jcode-notify-email" }
jcode-provider-metadata = { path = "crates/jcode-provider-metadata" }
jcode-provider-core = { path = "crates/jcode-provider-core" }
jcode-provider-openai = { path = "crates/jcode-provider-openai" }
jcode-provider-openrouter = { path = "crates/jcode-provider-openrouter" }
jcode-cross-file-repair = { path = "crates/jcode-cross-file-repair" }
jcode-multi-file-edit = { path = "crates/jcode-multi-file-edit" }
jcode-skills = { path = "crates/jcode-skills" }
jcode-mcp-advanced = { path = "crates/jcode-mcp-advanced" }
jcode-provider-gemini = { path = "crates/jcode-provider-gemini" }
jcode-tui-markdown = { path = "crates/jcode-tui-markdown" }
jcode-tui-messages = { path = "crates/jcode-tui-messages" }
jcode-tui-core = { path = "crates/jcode-tui-core" }
jcode-tui-mermaid = { path = "crates/jcode-tui-mermaid" }
jcode-tui-account-picker = { path = "crates/jcode-tui-account-picker" }
jcode-tui-render = { path = "crates/jcode-tui-render" }
jcode-tui-session-picker = { path = "crates/jcode-tui-session-picker" }
jcode-tui-style = { path = "crates/jcode-tui-style" }
jcode-tui-tool-display = { path = "crates/jcode-tui-tool-display" }
jcode-tui-usage-overlay = { path = "crates/jcode-tui-usage-overlay" }
jcode-update-core = { path = "crates/jcode-update-core" }
jcode-terminal-launch = { path = "crates/jcode-terminal-launch" }
jcode-tui-workspace = { path = "crates/jcode-tui-workspace" }
jcode-usage-types = { path = "crates/jcode-usage-types" }

# Streaming
tokio-stream = "0.1"
bytes = "1"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
arboard = "3"              # Clipboard support
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # Only PNG/JPEG (skip avif/rav1e, exr, gif, tiff, etc)

# Markdown & syntax highlighting
unicode-width = "0.2"   # Unicode character display width

# PDF parsing (behind feature flag)
jcode-pdf = { path = "crates/jcode-pdf", optional = true }
jcode-background-types = { path = "crates/jcode-background-types" }
jcode-batch-types = { path = "crates/jcode-batch-types" }
jcode-build-support = { path = "crates/jcode-build-support" }
jcode-compaction-core = { path = "crates/jcode-compaction-core" }
jcode-config-types = { path = "crates/jcode-config-types" }
jcode-core = { path = "crates/jcode-core" }
jcode-memory-types = { path = "crates/jcode-memory-types" }
jcode-message-types = { path = "crates/jcode-message-types" }
jcode-overnight-core = { path = "crates/jcode-overnight-core" }
jcode-plan = { path = "crates/jcode-plan" }
jcode-swarm-core = { path = "crates/jcode-swarm-core" }
jcode-protocol = { path = "crates/jcode-protocol" }
jcode-selfdev-types = { path = "crates/jcode-selfdev-types" }
jcode-session-types = { path = "crates/jcode-session-types" }
jcode-storage = { path = "crates/jcode-storage" }
jcode-task-types = { path = "crates/jcode-task-types" }
jcode-tool-core = { path = "crates/jcode-tool-core" }
jcode-tool-types = { path = "crates/jcode-tool-types" }
jcode-side-panel-types = { path = "crates/jcode-side-panel-types" }
jcode-lock-manager = { path = "crates/jcode-lock-manager" }
jcode-micro-ci = { path = "crates/jcode-micro-ci" }
jcode-code-value = { path = "crates/jcode-code-value" }
jcode-completion = { path = "crates/jcode-completion" }
jcode-lsp = { path = "crates/jcode-lsp" }
jcode-unified-scheduler = { path = "crates/jcode-unified-scheduler" }

# Archive extraction (for auto-update)
flate2 = "1"
tar = "0.4"
tempfile = "3"
attohttpc = { workspace = true }
agentgrep = { path = "crates/vendor-agentgrep" }
# 注: 如果 crates/vendor-agentgrep 不存在，运行 scripts/vendor_agentgrep.sh 创建
qrcode = { version = "0.14.1", default-features = false }
aws-config = "1.8.16"
aws-credential-types = "1.2.14"
aws-sdk-bedrockruntime = "1.130.0"
aws-types = "1.3.15"
aws-smithy-types = "1.4.7"
aws-sdk-bedrock = "1.141.0"
aws-sdk-sts = "1.103.0"

# gRPC dependencies
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
jsonwebtoken = "9.2"
tracing-subscriber = "0.3"
parking_lot = "0.12"
xmlparser = "0.13"

# Enterprise features (optional — toggle via --features enterprise)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid"], optional = true }
sys-info = "0.9"
mdns-sd = { version = "0.13", optional = true }
prometheus = { version = "0.13", optional = true }
jcode-cpu-inference = { path = "crates/jcode-cpu-inference", optional = true }

# REST dependencies
axum = { version = "0.8", features = ["ws"] }
hyper = "1"
futures-util = "0.3"

# Prometheus metrics
prometheus-client = "0.22"

[features]
# Keep the heavyweight local ONNX/tokenizer embedding stack opt-in. It remains
# available via `--features embeddings` or `JCODE_DEV_FEATURE_PROFILE=full`, but
# ordinary check/build loops should not compile the tract/tokenizers subtree.
default = ["pdf"]
dev-bins = []
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "tikv-jemallocator/stats",
    "tikv-jemalloc-ctl/stats",
]
jemalloc-prof = [
    "jemalloc",
    "tikv-jemallocator/profiling",
    "tikv-jemalloc-ctl/profiling",
]
embeddings = ["dep:jcode-embedding"]
pdf = ["dep:jcode-pdf"]
# Optional audit trail for auto-mode decisions (see src/auto_mode/engine.rs).
audit = []
redis = []
gpu-discovery = []

# Enterprise Server 特性 — 启用多租户/分布式推理/合规/管理后台
enterprise = [
    "dep:sqlx",
    "dep:mdns-sd",
    "dep:prometheus",
    "dep:jcode-cpu-inference",
]
enterprise-sqlite = ["enterprise", "sqlx/sqlite"]
enterprise-postgres = ["enterprise", "sqlx/postgres"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus"
] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"

[profile.release]
opt-level = 1
debug = 0
codegen-units = 256
incremental = true

[profile.selfdev]
inherits = "release"
opt-level = 0

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"

[build-dependencies]
tonic-build = "0.11"
